tests/error/self_extend.gw
// [contains] cannot extend itself
class C extends C {

}
